# big_o

./: .gitignore  Cargo.toml  LICENSE  README.md  run-all.sh  rust-toolchain.toml
.github/: CODEOWNERS
.github/workflows/: actions.yml  pr-conventional-commits.yaml  pre-merge-checks.yaml  rust.yml
examples/: stress.rs  stress_log.csv
src/: complexity.rs  error.rs  lib.rs  linalg.rs  name.rs  params.rs  validate.rs
tests/: api.rs  debug.rs  execution_time.rs  regressions.rs
