[package]
name = "big_o"
description = "Infers asymptotic computational complexity"
version = "0.1.2"
edition = "2021"
authors = ["Maksym Arutyunyan"]
repository = "https://github.com/maksym-arutyunyan/big_o"
homepage   = "https://github.com/maksym-arutyunyan/big_o"
documentation = "https://docs.rs/big-o/"
readme = "README.md"
license = "Apache-2.0"
keywords = ["big_o", "big-o", "asymptotic", "complexity", "analysis", "performance", "algorithm"]
categories    = ["development-tools", "development-tools::profiling", "development-tools::testing"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lstsq = "0.4"
nalgebra = "0.31"
float-cmp = "0.9.0"

[dev-dependencies]
assert_approx_eq = "1.1.0"
rand = "0.8.5"
